--- a/index.html
+++ b/index.html
@@ -3,9 +3,17 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>kahoot-spotify</title>
+  <title>SK</title>
+  <!-- Favicon for browsers -->
+  <link rel="icon" href="/src/images/favicon/favicon.ico" type="image/x-icon" />
+
+  <!-- Favicons for different devices -->
+  <link rel="icon" type="image/png" sizes="32x32" href="/src/images/favicon/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/src/images/favicon/favicon-16x16.png" />
+  <link rel="apple-touch-icon" href="/src/images/favicon/apple-touch-icon.png" />
+  <link rel="icon" type="image/png" sizes="192x192" href="/src/images/favicon/android-chrome-192x192.png" />
+  <link rel="icon" type="image/png" sizes="512x512" href="/src/images/favicon/android-chrome-512x512.png" />
 </head>
 
 <body>
